Bug 1028511 - Don't let refresh driver time go backwards when changing timers; r=vlad